# bigpyx

./: LICENSE  pyproject.toml  readme.md
.github/workflows/: ci.yaml
bigpy/: __init__.py
bigpyx/: __init__.py  big.py
